tests/NormalTests/paczka1/small_fuzzy/32412562.err
Error in line 7: vnslaLO A922 46,3
Error in line 4: 04SIt6p A662 26,9
